Update command data for Hyundai/Santa Fe Hybrid

--- a/tests/test_cases/2025/commands/7E4.7EC.220101|fc=1.yaml
+++ b/tests/test_cases/2025/commands/7E4.7EC.220101|fc=1.yaml
@@ -799,6 +799,21 @@ test_cases:
     SANTAFEHYB_HVBAT_CHARGING: 0
     SANTAFEHYB_HVBAT_PLUG_NORM: 0
     SANTAFEHYB_HVBAT_PLUG_RAPD: 0
+    SANTAFEHYB_HVBAT_SOC: 55
+  response: |-
+    7EC103E6201018FF3FF
+    7EC21EF6E0000000000
+    7EC22FF0F0A711F1B1D
+    7EC231E1F1B000029B9
+    7EC2448B90E00009200
+    7EC2500B66B0000B63A
+    7EC260000310000002E
+    7EC2785001153410001
+    7EC280C053A000003E8
+- expected_values:
+    SANTAFEHYB_HVBAT_CHARGING: 0
+    SANTAFEHYB_HVBAT_PLUG_NORM: 0
+    SANTAFEHYB_HVBAT_PLUG_RAPD: 0
     SANTAFEHYB_HVBAT_SOC: 70
   response: |-
     7EC103E6201018FF3FF
