--- a/tests/test_cases/2025/commands/7A0.7A8.22C00B|fc=1.yaml
+++ b/tests/test_cases/2025/commands/7A0.7A8.22C00B|fc=1.yaml
@@ -51,6 +51,18 @@ test_cases:
 - expected_values:
     SANTAFEHYB_TP_FL: 0
     SANTAFEHYB_TP_FR: 0.4
+    SANTAFEHYB_TP_RL: 0
+    SANTAFEHYB_TP_RR: 0
+  response: |-
+    7A8102462C00BFFFFFF
+    7A821F8000000000200
+    7A82200000002A63500
+    7A8230400A835000600
+    7A82434FFFFFFFF8DB0
+    7A8258DB0AAAAAAAAAA
+- expected_values:
+    SANTAFEHYB_TP_FL: 0
+    SANTAFEHYB_TP_FR: 0.4
     SANTAFEHYB_TP_RL: 0.8
     SANTAFEHYB_TP_RR: 0
   response: |-
