Update command data for Hyundai/Santa Fe Hybrid

--- a/tests/test_cases/2025/commands/7E4.7EC.220101|fc=1.yaml
+++ b/tests/test_cases/2025/commands/7E4.7EC.220101|fc=1.yaml
@@ -413,6 +413,21 @@ test_cases:
   response: |-
     7EC103E6201018FF3FF
     7EC21EF620000000000
+    7EC22004F0A40221D1E
+    7EC2322221D000029B7
+    7EC2425B701096E9200
+    7EC2500B8820000B855
+    7EC260000318B00002F
+    7EC2709001194260001
+    7EC280507C1130B03E8
+- expected_values:
+    SANTAFEHYB_HVBAT_CHARGING: 0
+    SANTAFEHYB_HVBAT_PLUG_NORM: 0
+    SANTAFEHYB_HVBAT_PLUG_RAPD: 0
+    SANTAFEHYB_HVBAT_SOC: 49
+  response: |-
+    7EC103E6201018FF3FF
+    7EC21EF620000000000
     7EC22FF890A6700FF00
     7EC23000000000024B8
     7EC2448B71A00199200
