Update command data for Hyundai/Santa Fe Hybrid

--- a/tests/test_cases/2025/commands/7A0.7A8.22C00B|fc=1.yaml
+++ b/tests/test_cases/2025/commands/7A0.7A8.22C00B|fc=1.yaml
@@ -44,6 +44,18 @@ test_cases:
   response: |-
     7A8102462C00BFFFFFF
     7A821F8000000000200
+    7A82200000002A02D00
+    7A8230400A32D000400
+    7A8242CFFFFFFFF8DB0
+    7A8258DB0AAAAAAAAAA
+- expected_values:
+    SANTAFEHYB_TP_FL: 0
+    SANTAFEHYB_TP_FR: 0.4
+    SANTAFEHYB_TP_RL: 0
+    SANTAFEHYB_TP_RR: 0
+  response: |-
+    7A8102462C00BFFFFFF
+    7A821F8000000000200
     7A82200000002A53200
     7A82304000000000002
     7A82432FFFFFFFF8DB0
@@ -115,9 +127,9 @@ test_cases:
     SANTAFEHYB_TP_RR: 0
   response: |-
     7A8102462C00BFFFFFF
-    7A821F8A02C000400B5
-    7A8223B0006009F2C00
-    7A8230400A32D000400
+    7A821F8A02B000400B9
+    7A82241000600A02D00
+    7A8230400B43D000600
     7A824FF8DB08DB08DB0
     7A8258DB0AAAAAAAAAA
 - expected_values:
