Update command data for Hyundai/Santa Fe Hybrid

--- a/tests/test_cases/2025/commands/7E4.7EC.220101|fc=1.yaml
+++ b/tests/test_cases/2025/commands/7E4.7EC.220101|fc=1.yaml
@@ -634,6 +634,21 @@ test_cases:
     SANTAFEHYB_HVBAT_CHARGING: 0
     SANTAFEHYB_HVBAT_PLUG_NORM: 0
     SANTAFEHYB_HVBAT_PLUG_RAPD: 0
+    SANTAFEHYB_HVBAT_SOC: 55
+  response: |-
+    7EC103E6201018FF3FF
+    7EC21EF6E0000000000
+    7EC2200000A68272223
+    7EC2327262100001FB9
+    7EC2425B80100007D00
+    7EC2500BAE50000BAB5
+    7EC260000323200002F
+    7EC27A50011CAB20000
+    7EC28000000000003E8
+- expected_values:
+    SANTAFEHYB_HVBAT_CHARGING: 0
+    SANTAFEHYB_HVBAT_PLUG_NORM: 0
+    SANTAFEHYB_HVBAT_PLUG_RAPD: 0
     SANTAFEHYB_HVBAT_SOC: 70
   response: |-
     7EC103E6201018FF3FF
