--- a/tests/test_cases/2025/commands/7E0.0131.yaml
+++ b/tests/test_cases/2025/commands/7E0.0131.yaml
@@ -10,5 +10,5 @@ test_cases:
     CLR_DIST: 13312
   response: '7E80441313400'
 - expected_values:
-    CLR_DIST: 16154
-  response: 7E80441313F1A
+    CLR_DIST: 16384
+  response: '7E80441314000'
