Update command data for Hyundai/Santa Fe Hybrid

--- a/tests/test_cases/2025/commands/7E4.7EC.220101|fc=1.yaml
+++ b/tests/test_cases/2025/commands/7E4.7EC.220101|fc=1.yaml
@@ -503,6 +503,21 @@ test_cases:
   response: |-
     7EC103E6201018FF3FF
     7EC21EF650000000000
+    7EC22002E0A3D080707
+    7EC23080806000025B6
+    7EC2424B50100009200
+    7EC2500C0510000C020
+    7EC26000033A9000031
+    7EC2705001250890001
+    7EC28050000000003E8
+- expected_values:
+    SANTAFEHYB_HVBAT_CHARGING: 0
+    SANTAFEHYB_HVBAT_PLUG_NORM: 0
+    SANTAFEHYB_HVBAT_PLUG_RAPD: 0
+    SANTAFEHYB_HVBAT_SOC: 50.5
+  response: |-
+    7EC103E6201018FF3FF
+    7EC21EF650000000000
     7EC2202E609E2221D1E
     7EC2322221D000027B1
     7EC2430AF0108629200
