Update command data for Hyundai/Santa Fe Hybrid

--- a/tests/test_cases/2023/commands/7A0.7A8.22C00B|fc=1.yaml
+++ b/tests/test_cases/2023/commands/7A0.7A8.22C00B|fc=1.yaml
@@ -2,6 +2,28 @@ command_id: 7A0.7A8.22C00B|fc=1
 test_cases:
 - expected_values:
     SANTAFEHYB_TP_FL: 0
+    SANTAFEHYB_TP_FR: 0
+    SANTAFEHYB_TP_RL: 0
+    SANTAFEHYB_TP_RR: 0
+  response: |-
+    7A8102062C00BFFFFFF
+    7A82180000000020000
+    7A82200020000000200
+    7A823000002FB87AF87
+    7A824AF87AF87AFAAAA
+- expected_values:
+    SANTAFEHYB_TP_FL: 0
+    SANTAFEHYB_TP_FR: 0
+    SANTAFEHYB_TP_RL: 0
+    SANTAFEHYB_TP_RR: 32.8
+  response: |-
+    7A8102062C00BFFFFFF
+    7A82180000000020000
+    7A822000200000002A4
+    7A823320400FB87AF87
+    7A824AF87AF87AFAAAA
+- expected_values:
+    SANTAFEHYB_TP_FL: 0
     SANTAFEHYB_TP_FR: 34.8
     SANTAFEHYB_TP_RL: 0
     SANTAFEHYB_TP_RR: 0
