--- a/tests/test_cases/2023/commands/7E2.7EA.22E004.yaml
+++ b/tests/test_cases/2023/commands/7E2.7EA.22E004.yaml
@@ -4,6 +4,51 @@ test_cases:
     SANTAFEHYB_VPWR: 100
   response: |-
     7EA102962E004FFFFFE
+    7EA210001010000006D
+    7EA22E83571165F8AF6
+    7EA23347581595C1E61
+    7EA2400080101010003
+    7EA2500000000070000
+- expected_values:
+    SANTAFEHYB_VPWR: 100
+  response: |-
+    7EA102962E004FFFFFE
+    7EA210001010000006F
+    7EA22E9356F145089FB
+    7EA23344281595B1E61
+    7EA2400080101010003
+    7EA2500000000070000
+- expected_values:
+    SANTAFEHYB_VPWR: 100
+  response: |-
+    7EA102962E004FFFFFE
+    7EA2100010100000070
+    7EA22EE356D1E048ADA
+    7EA23341B81592D1E61
+    7EA2400080101010003
+    7EA2500000000070000
+- expected_values:
+    SANTAFEHYB_VPWR: 100
+  response: |-
+    7EA102962E004FFFFFE
+    7EA2100010100000072
+    7EA229C32E11F0A8A88
+    7EA2331638059FD1A61
+    7EA240008010101000B
+    7EA2500000000070000
+- expected_values:
+    SANTAFEHYB_VPWR: 100
+  response: |-
+    7EA102962E004FFFFFE
+    7EA2100010100000072
+    7EA22A932D722888A7F
+    7EA2331648059F81A61
+    7EA240008010101000B
+    7EA2500000000070000
+- expected_values:
+    SANTAFEHYB_VPWR: 100
+  response: |-
+    7EA102962E004FFFFFE
     7EA210001010000007E
     7EA22D131D9165E8F07
     7EA23315A7F5D2E1A7A
