--- a/tests/test_cases/2023/commands/7E4.7EC.220105|fc=1.yaml
+++ b/tests/test_cases/2023/commands/7E4.7EC.220105|fc=1.yaml
@@ -1,6 +1,16 @@
 command_id: 7E4.7EC.220105|fc=1
 test_cases:
 - expected_values:
+    SANTAFEHYB_HVBAT_SOC_DISP: 56.5
+  response: |-
+    7EC102E620105E03A04
+    7EC2100006400006400
+    7EC220000072784001E
+    7EC2378226000005000
+    7EC240003E860097800
+    7EC2571000000000000
+    7EC26005C010000AAAA
+- expected_values:
     SANTAFEHYB_HVBAT_SOC_DISP: 93
   response: |-
     7EC102E620105E03A04
