Update command data for Hyundai/Santa Fe Hybrid

--- a/tests/test_cases/2023/commands/7E7.7EF.22C101.yaml
+++ b/tests/test_cases/2023/commands/7E7.7EF.22C101.yaml
@@ -40,6 +40,32 @@ test_cases:
     7EF25FA00FF000000FF
     7EF26FFAAAAAAAAAAAA
 - expected_values:
+    SANTAFEHYB_TIRE_FL_SPD: 0
+    SANTAFEHYB_TIRE_FR_SPD: 0
+    SANTAFEHYB_TIRE_RL_SPD: 0
+    SANTAFEHYB_TIRE_RR_SPD: 0
+  response: |-
+    7EF102A62C101FFD7E7
+    7EF21F011E8001104CA
+    7EF22D200000000FF7F
+    7EF23FF00F4F5010000
+    7EF24FFFF7EC407F807
+    7EF25FE0DFF202200FF
+    7EF26FFAAAAAAAAAAAA
+- expected_values:
+    SANTAFEHYB_TIRE_FL_SPD: 4
+    SANTAFEHYB_TIRE_FR_SPD: 4
+    SANTAFEHYB_TIRE_RL_SPD: 4
+    SANTAFEHYB_TIRE_RR_SPD: 4
+  response: |-
+    7EF102A62C101FFD7E7
+    7EF21F011EC041104CB
+    7EF22D204040404FF81
+    7EF23FF00F0F5010000
+    7EF24FFFF7EFA080007
+    7EF25FA00FF000000FF
+    7EF26FFAAAAAAAAAAAA
+- expected_values:
     SANTAFEHYB_TIRE_FL_SPD: 32
     SANTAFEHYB_TIRE_FR_SPD: 32
     SANTAFEHYB_TIRE_RL_SPD: 32
@@ -129,6 +155,32 @@ test_cases:
     7EF23FF00F4F5010000
     7EF24FFFF8001080907
     7EF25FE0EFF1B1D00FF
+    7EF26FFAAAAAAAAAAAA
+- expected_values:
+    SANTAFEHYB_TIRE_FL_SPD: 66
+    SANTAFEHYB_TIRE_FR_SPD: 66
+    SANTAFEHYB_TIRE_RL_SPD: 66
+    SANTAFEHYB_TIRE_RR_SPD: 66
+  response: |-
+    7EF102A62C101FFD7E7
+    7EF21F01214420F04CC
+    7EF22D242424242FF7D
+    7EF23FF00F0F4000000
+    7EF24FFFF800D080707
+    7EF25FF00FF000000FF
+    7EF26FFAAAAAAAAAAAA
+- expected_values:
+    SANTAFEHYB_TIRE_FL_SPD: 0
+    SANTAFEHYB_TIRE_FR_SPD: 0
+    SANTAFEHYB_TIRE_RL_SPD: 0
+    SANTAFEHYB_TIRE_RR_SPD: 0
+  response: |-
+    7EF102A62C101FFD7E7
+    7EF21F01818002304CA
+    7EF22D200000000FF7F
+    7EF23FF00F0F5010000
+    7EF24FFFF891107F808
+    7EF251500FF000000FF
     7EF26FFAAAAAAAAAAAA
 - expected_values:
     SANTAFEHYB_TIRE_FL_SPD: 11
