Update command data for Hyundai/Santa Fe Hybrid

--- a/tests/test_cases/2025/commands/7E4.7EC.220104|fc=1.yaml
+++ b/tests/test_cases/2025/commands/7E4.7EC.220104|fc=1.yaml
@@ -52,6 +52,22 @@ test_cases:
     SANTAFEHYB_HVBAT_CMU065_VOLT: 3.2
     SANTAFEHYB_HVBAT_CMU066_VOLT: 3.2
     SANTAFEHYB_HVBAT_CMU067_VOLT: 3.2
+    SANTAFEHYB_HVBAT_CMU068_VOLT: 3.18
+    SANTAFEHYB_HVBAT_CMU069_VOLT: 3.18
+    SANTAFEHYB_HVBAT_CMU070_VOLT: 3.18
+    SANTAFEHYB_HVBAT_CMU071_VOLT: 3.18
+    SANTAFEHYB_HVBAT_CMU072_VOLT: 3.18
+  response: |-
+    7EC1027620104FF0000
+    7EC2100A0A0A09F9F9F
+    7EC229F9F0000000000
+    7EC2300000000000000
+    7EC2400000000000000
+    7EC250000000000AAAA
+- expected_values:
+    SANTAFEHYB_HVBAT_CMU065_VOLT: 3.2
+    SANTAFEHYB_HVBAT_CMU066_VOLT: 3.2
+    SANTAFEHYB_HVBAT_CMU067_VOLT: 3.2
     SANTAFEHYB_HVBAT_CMU068_VOLT: 3.2
     SANTAFEHYB_HVBAT_CMU069_VOLT: 3.2
     SANTAFEHYB_HVBAT_CMU070_VOLT: 3.2
