--- a/tests/test_cases/2025/commands/7E7.7EF.22C101.yaml
+++ b/tests/test_cases/2025/commands/7E7.7EF.22C101.yaml
@@ -72,6 +72,19 @@ test_cases:
     SANTAFEHYB_TIRE_RR_SPD: 0
   response: |-
     7EF102A62C101FFD7E7
+    7EF21700000000A01BA
+    7EF22D400000000FF80
+    7EF23FF0030F4000000
+    7EF24FFFF7FD107EE08
+    7EF2500FFFF000000FF
+    7EF26FFAAAAAAAAAAAA
+- expected_values:
+    SANTAFEHYB_TIRE_FL_SPD: 0
+    SANTAFEHYB_TIRE_FR_SPD: 0
+    SANTAFEHYB_TIRE_RL_SPD: 0
+    SANTAFEHYB_TIRE_RR_SPD: 0
+  response: |-
+    7EF102A62C101FFD7E7
     7EF21700000000A01BD
     7EF22D400000000FF7F
     7EF23FF0034F5010001
