Update command data for Hyundai/Santa Fe Hybrid

--- a/tests/test_cases/2025/commands/7E4.7EC.220101|fc=1.yaml
+++ b/tests/test_cases/2025/commands/7E4.7EC.220101|fc=1.yaml
@@ -383,6 +383,21 @@ test_cases:
   response: |-
     7EC103E6201018FF3FF
     7EC21EF5A0000000000
+    7EC22008A0A030E0D0D
+    7EC230E0E0D000029B3
+    7EC2418B30100199200
+    7EC2500CC8B0000CC5D
+    7EC2600003702000034
+    7EC273000137A440000
+    7EC28FE084A146503E8
+- expected_values:
+    SANTAFEHYB_HVBAT_CHARGING: 0
+    SANTAFEHYB_HVBAT_PLUG_NORM: 0
+    SANTAFEHYB_HVBAT_PLUG_RAPD: 0
+    SANTAFEHYB_HVBAT_SOC: 45
+  response: |-
+    7EC103E6201018FF3FF
+    7EC21EF5A0000000000
     7EC22037008F3FEFDFF
     7EC23FEFEFF0000249E
     7EC24249D0100009200
