Update command data for Hyundai/Santa Fe Hybrid

--- a/tests/test_cases/2025/commands/7E7.7EF.22C101.yaml
+++ b/tests/test_cases/2025/commands/7E7.7EF.22C101.yaml
@@ -98,6 +98,19 @@ test_cases:
     SANTAFEHYB_TIRE_RR_SPD: 0
   response: |-
     7EF102A62C101FFD7E7
+    7EF21700000000A04E8
+    7EF22D400000000FF83
+    7EF23FF0030F5010001
+    7EF24FFFF7F2407EA08
+    7EF2500FFFF000000FF
+    7EF26FFAAAAAAAAAAAA
+- expected_values:
+    SANTAFEHYB_TIRE_FL_SPD: 0
+    SANTAFEHYB_TIRE_FR_SPD: 0
+    SANTAFEHYB_TIRE_RL_SPD: 0
+    SANTAFEHYB_TIRE_RR_SPD: 0
+  response: |-
+    7EF102A62C101FFD7E7
     7EF21700000000A04E9
     7EF22D400000000FF7D
     7EF23FF0034F5010001
