Update command data for Hyundai/Santa Fe Hybrid

--- a/tests/test_cases/2025/commands/7E7.7EF.22C101.yaml
+++ b/tests/test_cases/2025/commands/7E7.7EF.22C101.yaml
@@ -274,6 +274,19 @@ test_cases:
     7EF25FDFFFF000000FF
     7EF26FFAAAAAAAAAAAA
 - expected_values:
+    SANTAFEHYB_TIRE_FL_SPD: 48
+    SANTAFEHYB_TIRE_FR_SPD: 49
+    SANTAFEHYB_TIRE_RL_SPD: 48
+    SANTAFEHYB_TIRE_RR_SPD: 49
+  response: |-
+    7EF102A62C101FFD7E7
+    7EF21701BB4313504EC
+    7EF22D330313031FF7F
+    7EF23FF0030F4000000
+    7EF24FFFF8018082708
+    7EF2504FFFF000000FF
+    7EF26FFAAAAAAAAAAAA
+- expected_values:
     SANTAFEHYB_TIRE_FL_SPD: 16
     SANTAFEHYB_TIRE_FR_SPD: 16
     SANTAFEHYB_TIRE_RL_SPD: 16
