Update command data for Hyundai/Santa Fe Hybrid

--- a/tests/test_cases/2025/commands/7E4.7EC.220104|fc=1.yaml
+++ b/tests/test_cases/2025/commands/7E4.7EC.220104|fc=1.yaml
@@ -192,3 +192,22 @@ test_cases:
     7EC2300000000000000
     7EC2400000000000000
     7EC250000000000AAAA
+- expected_values:
+    SANTAFEHYB_HVBAT_CMU065_VOLT: 3.64
+    SANTAFEHYB_HVBAT_CMU066_VOLT: 3.64
+    SANTAFEHYB_HVBAT_CMU067_VOLT: 3.64
+    SANTAFEHYB_HVBAT_CMU068_VOLT: 3.64
+    SANTAFEHYB_HVBAT_CMU069_VOLT: 3.64
+    SANTAFEHYB_HVBAT_CMU070_VOLT: 3.64
+    SANTAFEHYB_HVBAT_CMU071_VOLT: 3.64
+    SANTAFEHYB_HVBAT_CMU072_VOLT: 3.64
+  response: |-
+    7EC2600003846000035
+    7EC27610013FB590000
+    7EC28000000000003E8
+    7EC1027620104FF0000
+    7EC2100B6B6B6B6B6B6
+    7EC22B6B60000000000
+    7EC2300000000000000
+    7EC2400000000000000
+    7EC250000000000AAAA
