--- a/tests/test_cases/2025/commands/7E0.0167.yaml
+++ b/tests/test_cases/2025/commands/7E0.0167.yaml
@@ -7,14 +7,14 @@ test_cases:
     ECT_2_SUP: 1
   response: 7E8054167034D44
 - expected_values:
-    ECT_1: 93
+    ECT_1: 96
     ECT_1_SUP: 1
-    ECT_2: 86
+    ECT_2: 90
     ECT_2_SUP: 1
-  response: 7E805416703857E
+  response: '7E8054167038882'
 - expected_values:
-    ECT_1: 97
+    ECT_1: 98
     ECT_1_SUP: 1
-    ECT_2: 86
+    ECT_2: 87
     ECT_2_SUP: 1
-  response: 7E805416703897E
+  response: 7E8054167038A7F
