Update command data for Hyundai/Santa Fe Hybrid

--- a/tests/test_cases/2025/commands/7E0.0167.yaml
+++ b/tests/test_cases/2025/commands/7E0.0167.yaml
@@ -1,11 +1,11 @@
 command_id: 7E0.0167
 test_cases:
 - expected_values:
-    ECT_1: 37
+    ECT_1: 27
     ECT_1_SUP: 1
-    ECT_2: 28
+    ECT_2: 24
     ECT_2_SUP: 1
-  response: 7E8054167034D44
+  response: '7E8054167034340'
 - expected_values:
     ECT_1: 96
     ECT_1_SUP: 1
