Update command data for Hyundai/Santa Fe Hybrid

--- a/tests/test_cases/2025/commands/7E4.7EC.220105|fc=1.yaml
+++ b/tests/test_cases/2025/commands/7E4.7EC.220105|fc=1.yaml
@@ -171,14 +171,24 @@ test_cases:
     7EC2584000000000000
     7EC260000000000AAAA
 - expected_values:
-    SANTAFEHYB_HVBAT_SOC_DISP: 47.5
+    SANTAFEHYB_HVBAT_SOC_DISP: 43
   response: |-
     7EC102E620105E03A64
-    7EC2100008C01007900
+    7EC2100008C01007800
     7EC220000000000000B
-    7EC2394111B00005000
+    7EC23E80FF501005000
     7EC240003E801000000
-    7EC255F000000000000
+    7EC2556000000000000
+    7EC260000000000AAAA
+- expected_values:
+    SANTAFEHYB_HVBAT_SOC_DISP: 41.5
+  response: |-
+    7EC102E620105E03A64
+    7EC2100008C01007800
+    7EC220000000000000C
+    7EC23AD101001005000
+    7EC240003E801000000
+    7EC2553000000000000
     7EC260000000000AAAA
 - expected_values:
     SANTAFEHYB_HVBAT_SOC_DISP: 66.5
