Update command data for Hyundai/Santa Fe Hybrid

--- a/tests/test_cases/2025/commands/7E4.7EC.220101|fc=1.yaml
+++ b/tests/test_cases/2025/commands/7E4.7EC.220101|fc=1.yaml
@@ -199,6 +199,21 @@ test_cases:
     SANTAFEHYB_HVBAT_CHARGING: 0
     SANTAFEHYB_HVBAT_PLUG_NORM: 0
     SANTAFEHYB_HVBAT_PLUG_RAPD: 0
+    SANTAFEHYB_HVBAT_SOC: 39
+  response: |-
+    7EC103E6201018FF3FF
+    7EC21EF4E0000000000
+    7EC22FED90A39141213
+    7EC23131312000025B6
+    7EC2448B50700009200
+    7EC2500D5310000D506
+    7EC2600003958000036
+    7EC2762001461C70001
+    7EC28050A9B1A3B03E8
+- expected_values:
+    SANTAFEHYB_HVBAT_CHARGING: 0
+    SANTAFEHYB_HVBAT_PLUG_NORM: 0
+    SANTAFEHYB_HVBAT_PLUG_RAPD: 0
     SANTAFEHYB_HVBAT_SOC: 39.5
   response: |-
     7EC103E6201018FF3FF
