--- a/tests/test_cases/2025/commands/7E4.7EC.220102|fc=1.yaml
+++ b/tests/test_cases/2025/commands/7E4.7EC.220102|fc=1.yaml
@@ -121,6 +121,46 @@ test_cases:
     7EC24A0A0A0A0A0A0A0
     7EC25A0A0A09F9FAAAA
 - expected_values:
+    SANTAFEHYB_HVBAT_CMU001_VOLT: 3.14
+    SANTAFEHYB_HVBAT_CMU002_VOLT: 3.16
+    SANTAFEHYB_HVBAT_CMU003_VOLT: 3.16
+    SANTAFEHYB_HVBAT_CMU004_VOLT: 3.18
+    SANTAFEHYB_HVBAT_CMU005_VOLT: 3.18
+    SANTAFEHYB_HVBAT_CMU006_VOLT: 3.18
+    SANTAFEHYB_HVBAT_CMU007_VOLT: 3.18
+    SANTAFEHYB_HVBAT_CMU008_VOLT: 3.18
+    SANTAFEHYB_HVBAT_CMU009_VOLT: 3.18
+    SANTAFEHYB_HVBAT_CMU010_VOLT: 3.18
+    SANTAFEHYB_HVBAT_CMU011_VOLT: 3.18
+    SANTAFEHYB_HVBAT_CMU012_VOLT: 3.18
+    SANTAFEHYB_HVBAT_CMU013_VOLT: 3.18
+    SANTAFEHYB_HVBAT_CMU014_VOLT: 3.18
+    SANTAFEHYB_HVBAT_CMU015_VOLT: 3.18
+    SANTAFEHYB_HVBAT_CMU016_VOLT: 3.18
+    SANTAFEHYB_HVBAT_CMU017_VOLT: 3.2
+    SANTAFEHYB_HVBAT_CMU018_VOLT: 3.18
+    SANTAFEHYB_HVBAT_CMU019_VOLT: 3.2
+    SANTAFEHYB_HVBAT_CMU020_VOLT: 3.2
+    SANTAFEHYB_HVBAT_CMU021_VOLT: 3.18
+    SANTAFEHYB_HVBAT_CMU022_VOLT: 3.2
+    SANTAFEHYB_HVBAT_CMU023_VOLT: 3.18
+    SANTAFEHYB_HVBAT_CMU024_VOLT: 3.2
+    SANTAFEHYB_HVBAT_CMU025_VOLT: 3.18
+    SANTAFEHYB_HVBAT_CMU026_VOLT: 3.18
+    SANTAFEHYB_HVBAT_CMU027_VOLT: 3.18
+    SANTAFEHYB_HVBAT_CMU028_VOLT: 3.18
+    SANTAFEHYB_HVBAT_CMU029_VOLT: 3.18
+    SANTAFEHYB_HVBAT_CMU030_VOLT: 3.18
+    SANTAFEHYB_HVBAT_CMU031_VOLT: 3.18
+    SANTAFEHYB_HVBAT_CMU032_VOLT: 3.18
+  response: |-
+    7EC1027620102FFFFFF
+    7EC21FF9D9E9E9F9F9F
+    7EC229F9F9F9F9F9F9F
+    7EC239F9F9FA09FA0A0
+    7EC249FA09FA09F9F9F
+    7EC259F9F9F9F9FAAAA
+- expected_values:
     SANTAFEHYB_HVBAT_CMU001_VOLT: 3.16
     SANTAFEHYB_HVBAT_CMU002_VOLT: 3.18
     SANTAFEHYB_HVBAT_CMU003_VOLT: 3.2
