Update command data for Hyundai/Santa Fe Hybrid

--- a/tests/test_cases/2025/commands/7E0.0167.yaml
+++ b/tests/test_cases/2025/commands/7E0.0167.yaml
@@ -7,11 +7,11 @@ test_cases:
     ECT_2_SUP: 1
   response: '7E8054167033534'
 - expected_values:
-    ECT_1: 18
+    ECT_1: 15
     ECT_1_SUP: 1
     ECT_2: 10
     ECT_2_SUP: 1
-  response: 7E8054167033A32
+  response: '7E8054167033732'
 - expected_values:
     ECT_1: 96
     ECT_1_SUP: 1
