--- a/tests/test_cases/2025/commands/7E0.0131.yaml
+++ b/tests/test_cases/2025/commands/7E0.0131.yaml
@@ -10,5 +10,5 @@ test_cases:
     CLR_DIST: 13312
   response: '7E80441313400'
 - expected_values:
-    CLR_DIST: 18688
-  response: '7E80441314900'
+    CLR_DIST: 18961
+  response: 7E80441314A11
