--- a/generations.yaml
+++ b/generations.yaml
@@ -1,3 +1,6 @@
+references:
+  - "https://en.wikipedia.org/wiki/Hyundai_Santa_Fe"
+
 generations:
   - name: "First Generation (Fourth-generation Santa Fe platform)"
     start_year: 2020
