--- a/tests/test_cases/2025/commands/7E2.7EA.22E004.yaml
+++ b/tests/test_cases/2025/commands/7E2.7EA.22E004.yaml
@@ -67,6 +67,15 @@ test_cases:
     SANTAFEHYB_VPWR: 3
   response: |-
     7EA102762E004BD71F0
+    7EA2100000000074F1F
+    7EA22C0073D00000000
+    7EA2300000303000000
+    7EA2400000000FFD1FF
+    7EA25D1FFFFFFFFAAAA
+- expected_values:
+    SANTAFEHYB_VPWR: 3
+  response: |-
+    7EA102762E004BD71F0
     7EA21000000000A1F1F
     7EA22C6073800000000
     7EA2300000303000000
@@ -139,11 +148,11 @@ test_cases:
     SANTAFEHYB_VPWR: 3
   response: |-
     7EA102762E004BD71F0
-    7EA21001FF0003B151F
-    7EA22B2074C00000000
+    7EA21001FF000392D1F
+    7EA22BE073F00000000
     7EA2300000303000000
-    7EA2400000000FFE2FF
-    7EA25E2FFF5FFF5AAAA
+    7EA2400000000FFD1FF
+    7EA25D1FFFFFFFFAAAA
 - expected_values:
     SANTAFEHYB_VPWR: 3
   response: |-
