Update command data for Hyundai/Santa Fe Hybrid

--- a/tests/test_cases/2025/commands/7A0.7A8.22C00B|fc=1.yaml
+++ b/tests/test_cases/2025/commands/7A0.7A8.22C00B|fc=1.yaml
@@ -97,16 +97,28 @@ test_cases:
     7A82437FFFF8DB0FFFF
     7A825FFFFAAAAAAAAAA
 - expected_values:
-    SANTAFEHYB_TP_FL: 30.8
+    SANTAFEHYB_TP_FL: 30
+    SANTAFEHYB_TP_FR: 0
+    SANTAFEHYB_TP_RL: 1.2
+    SANTAFEHYB_TP_RR: 0
+  response: |-
+    7A8102462C00BFFFFFF
+    7A821F89621000400AF
+    7A82238000600962100
+    7A82304009B22000400
+    7A824FF8DB08DB08DB0
+    7A8258DB0AAAAAAAAAA
+- expected_values:
+    SANTAFEHYB_TP_FL: 30.4
     SANTAFEHYB_TP_FR: 0
     SANTAFEHYB_TP_RL: 0.8
     SANTAFEHYB_TP_RR: 0
   response: |-
     7A8102462C00BFFFFFF
-    7A821F89A230004009F
-    7A82223000400982400
-    7A82304009C24000400
-    7A824238DB08DB08DB0
+    7A821F898210004009E
+    7A82222000400982100
+    7A82305009B22000400
+    7A824218DB08DB08DB0
     7A8258DB0AAAAAAAAAA
 - expected_values:
     SANTAFEHYB_TP_FL: 31.2
