--- a/tests/test_cases/2025/commands/7E4.7EC.220104|fc=1.yaml
+++ b/tests/test_cases/2025/commands/7E4.7EC.220104|fc=1.yaml
@@ -1,7 +1,7 @@
 command_id: 7E4.7EC.220104|fc=1
 test_cases:
 - expected_values:
-    SANTAFEHYB_HVBAT_CMU065_VOLT: 2.98
+    SANTAFEHYB_HVBAT_CMU065_VOLT: 2.96
     SANTAFEHYB_HVBAT_CMU066_VOLT: 2.96
     SANTAFEHYB_HVBAT_CMU067_VOLT: 2.96
     SANTAFEHYB_HVBAT_CMU068_VOLT: 2.96
@@ -11,7 +11,7 @@ test_cases:
     SANTAFEHYB_HVBAT_CMU072_VOLT: 2.94
   response: |-
     7EC1027620104FF0000
-    7EC2100959494949494
+    7EC2100949494949494
     7EC2293930000000000
     7EC2300000000000000
     7EC2400000000000000
@@ -29,6 +29,22 @@ test_cases:
     7EC1027620104FF0000
     7EC21009F9F9F9F9F9F
     7EC229E9E0000000000
+    7EC2300000000000000
+    7EC2400000000000000
+    7EC250000000000AAAA
+- expected_values:
+    SANTAFEHYB_HVBAT_CMU065_VOLT: 3.2
+    SANTAFEHYB_HVBAT_CMU066_VOLT: 3.18
+    SANTAFEHYB_HVBAT_CMU067_VOLT: 3.2
+    SANTAFEHYB_HVBAT_CMU068_VOLT: 3.2
+    SANTAFEHYB_HVBAT_CMU069_VOLT: 3.18
+    SANTAFEHYB_HVBAT_CMU070_VOLT: 3.18
+    SANTAFEHYB_HVBAT_CMU071_VOLT: 3.16
+    SANTAFEHYB_HVBAT_CMU072_VOLT: 3.14
+  response: |-
+    7EC1027620104FF0000
+    7EC2100A09FA0A09F9F
+    7EC229E9D0000000000
     7EC2300000000000000
     7EC2400000000000000
     7EC250000000000AAAA
