Update command data for Hyundai/Santa Fe Hybrid

--- a/tests/test_cases/2023/commands/7A0.7A8.22C00B|fc=1.yaml
+++ b/tests/test_cases/2023/commands/7A0.7A8.22C00B|fc=1.yaml
@@ -89,6 +89,17 @@ test_cases:
     7A823330400FB87AF87
     7A824AF87AF87AFAAAA
 - expected_values:
+    SANTAFEHYB_TP_FL: 33.6
+    SANTAFEHYB_TP_FR: 35
+    SANTAFEHYB_TP_RL: 33.2
+    SANTAFEHYB_TP_RR: 33.6
+  response: |-
+    7A8102062C00BFFFFFF
+    7A82180A8350400AF34
+    7A8220400A6340400A8
+    7A823340400FB87AF87
+    7A824AF87AF87AFAAAA
+- expected_values:
     SANTAFEHYB_TP_FL: 33.8
     SANTAFEHYB_TP_FR: 35.4
     SANTAFEHYB_TP_RL: 33.2
