--- a/tests/test_cases/2023/commands/7E2.7EA.22E004.yaml
+++ b/tests/test_cases/2023/commands/7E2.7EA.22E004.yaml
@@ -86,8 +86,8 @@ test_cases:
   response: |-
     7EA102962E004FFFFFE
     7EA2100010100000080
-    7EA22D631CB1CC699E4
-    7EA2330477F5D271A7A
+    7EA225E3348190F8762
+    7EA2332E77F58A81B5E
     7EA240008010101000B
     7EA2500000000070000
 - expected_values:
@@ -97,6 +97,15 @@ test_cases:
     7EA2100010100000080
     7EA22E331E8195F96FE
     7EA23304D7F5D2D1A7A
+    7EA240008010101000B
+    7EA2500000000070000
+- expected_values:
+    SANTAFEHYB_VPWR: 100
+  response: |-
+    7EA102962E004FFFFFE
+    7EA2100010100000081
+    7EA225A33F11A138762
+    7EA2332E97F58A91B5E
     7EA240008010101000B
     7EA2500000000070000
 - expected_values:
