--- a/tests/test_cases/2025/commands/7A0.7A8.22C00B|fc=1.yaml
+++ b/tests/test_cases/2025/commands/7A0.7A8.22C00B|fc=1.yaml
@@ -121,6 +121,18 @@ test_cases:
     7A824218DB08DB08DB0
     7A8258DB0AAAAAAAAAA
 - expected_values:
+    SANTAFEHYB_TP_FL: 30.8
+    SANTAFEHYB_TP_FR: 0
+    SANTAFEHYB_TP_RL: 0.8
+    SANTAFEHYB_TP_RR: 0
+  response: |-
+    7A8102462C00BFFFFFF
+    7A821F89A25000400A0
+    7A82227000400A63100
+    7A82306009E28000400
+    7A824FF8DB08DB08DB0
+    7A8258DB0AAAAAAAAAA
+- expected_values:
     SANTAFEHYB_TP_FL: 31
     SANTAFEHYB_TP_FR: 0
     SANTAFEHYB_TP_RL: 0
