--- a/tests/test_cases/2025/commands/7E0.0149.yaml
+++ b/tests/test_cases/2025/commands/7E0.0149.yaml
@@ -1,6 +1,9 @@
 command_id: 7E0.0149
 test_cases:
 - expected_values:
+    APP_D: 14.5098
+  response: '7E803414925'
+- expected_values:
     APP_D: 27.84314
   response: '7E803414947'
 - expected_values:
