--- a/tests/test_cases/2025/commands/7E0.014A.yaml
+++ b/tests/test_cases/2025/commands/7E0.014A.yaml
@@ -1,6 +1,9 @@
 command_id: 7E0.014A
 test_cases:
 - expected_values:
+    APP_E: 7.05882
+  response: 7E803414A12
+- expected_values:
     APP_E: 14.5098
   response: 7E803414A25
 - expected_values:
