Update command data for Hyundai/Santa Fe Hybrid

--- a/tests/test_cases/2025/commands/7E4.7EC.220101|fc=1.yaml
+++ b/tests/test_cases/2025/commands/7E4.7EC.220101|fc=1.yaml
@@ -454,6 +454,21 @@ test_cases:
     SANTAFEHYB_HVBAT_CHARGING: 0
     SANTAFEHYB_HVBAT_PLUG_NORM: 0
     SANTAFEHYB_HVBAT_PLUG_RAPD: 0
+    SANTAFEHYB_HVBAT_SOC: 43.5
+  response: |-
+    7EC103E6201018FF3FF
+    7EC21EF570000000000
+    7EC22FEB60A651A1719
+    7EC231A1A17000021B8
+    7EC2448B80E00009200
+    7EC2500DB590000DB2A
+    7EC2600003B00000037
+    7EC27EA001519F90001
+    7EC280B060E0F0B03E8
+- expected_values:
+    SANTAFEHYB_HVBAT_CHARGING: 0
+    SANTAFEHYB_HVBAT_PLUG_NORM: 0
+    SANTAFEHYB_HVBAT_PLUG_RAPD: 0
     SANTAFEHYB_HVBAT_SOC: 44
   response: |-
     7EC103E6201018FF3FF
