Update command data for Hyundai/Santa Fe Hybrid

--- a/tests/test_cases/2025/commands/7E7.7EF.22C101.yaml
+++ b/tests/test_cases/2025/commands/7E7.7EF.22C101.yaml
@@ -261,6 +261,19 @@ test_cases:
     7EF2504FFFF000000FF
     7EF26FFAAAAAAAAAAAA
 - expected_values:
+    SANTAFEHYB_TIRE_FL_SPD: 24
+    SANTAFEHYB_TIRE_FR_SPD: 27
+    SANTAFEHYB_TIRE_RL_SPD: 23
+    SANTAFEHYB_TIRE_RR_SPD: 26
+  response: |-
+    7EF102A62C101FFD7E7
+    7EF21701D94193504EC
+    7EF22D4181B171AFF7F
+    7EF23FF0030F4000000
+    7EF24FFFF86DA090609
+    7EF25C2FFFF000000FF
+    7EF26FFAAAAAAAAAAAA
+- expected_values:
     SANTAFEHYB_TIRE_FL_SPD: 16
     SANTAFEHYB_TIRE_FR_SPD: 16
     SANTAFEHYB_TIRE_RL_SPD: 16
