--- a/tests/test_cases/2025/commands/7E4.7EC.220101|fc=1.yaml
+++ b/tests/test_cases/2025/commands/7E4.7EC.220101|fc=1.yaml
@@ -589,6 +589,21 @@ test_cases:
     SANTAFEHYB_HVBAT_CHARGING: 0
     SANTAFEHYB_HVBAT_PLUG_NORM: 0
     SANTAFEHYB_HVBAT_PLUG_RAPD: 0
+    SANTAFEHYB_HVBAT_SOC: 53
+  response: |-
+    7EC103E6201018FF3FF
+    7EC21EF6A0000000000
+    7EC2200000A5D00FF00
+    7EC230000FF000024B8
+    7EC240AB80F00199200
+    7EC2500DF620000DF31
+    7EC2600003C18000038
+    7EC27F00015867A0001
+    7EC280900000C5A03E8
+- expected_values:
+    SANTAFEHYB_HVBAT_CHARGING: 0
+    SANTAFEHYB_HVBAT_PLUG_NORM: 0
+    SANTAFEHYB_HVBAT_PLUG_RAPD: 0
     SANTAFEHYB_HVBAT_SOC: 80
   response: |-
     7EC103E6201018FF3FF
