--- a/tests/test_cases/2025/commands/7E4.7EC.220101|fc=1.yaml
+++ b/tests/test_cases/2025/commands/7E4.7EC.220101|fc=1.yaml
@@ -574,6 +574,21 @@ test_cases:
     SANTAFEHYB_HVBAT_CHARGING: 0
     SANTAFEHYB_HVBAT_PLUG_NORM: 0
     SANTAFEHYB_HVBAT_PLUG_RAPD: 0
+    SANTAFEHYB_HVBAT_SOC: 48.5
+  response: |-
+    7EC103E6201018FF3FF
+    7EC21EF610000000000
+    7EC22FE3D0AA1090808
+    7EC23090908000027BD
+    7EC2448BC0E00009200
+    7EC2500E2D10000E2A2
+    7EC2600003D01000039
+    7EC27CD0015E5F40001
+    7EC28120753121B03E8
+- expected_values:
+    SANTAFEHYB_HVBAT_CHARGING: 0
+    SANTAFEHYB_HVBAT_PLUG_NORM: 0
+    SANTAFEHYB_HVBAT_PLUG_RAPD: 0
     SANTAFEHYB_HVBAT_SOC: 80
   response: |-
     7EC103E6201018FF3FF
