Update command data for Hyundai/Santa Fe Hybrid

--- a/tests/test_cases/2025/commands/7E4.7EC.220101|fc=1.yaml
+++ b/tests/test_cases/2025/commands/7E4.7EC.220101|fc=1.yaml
@@ -383,6 +383,21 @@ test_cases:
   response: |-
     7EC103E6201018FF3FF
     7EC21EF540000000000
+    7EC2200200A1F161516
+    7EC23161615000026B4
+    7EC2418B30100009200
+    7EC2500E39C0000E371
+    7EC2600003D3800003A
+    7EC27020015FC890001
+    7EC28020831144C03E8
+- expected_values:
+    SANTAFEHYB_HVBAT_CHARGING: 0
+    SANTAFEHYB_HVBAT_PLUG_NORM: 0
+    SANTAFEHYB_HVBAT_PLUG_RAPD: 0
+    SANTAFEHYB_HVBAT_SOC: 42
+  response: |-
+    7EC103E6201018FF3FF
+    7EC21EF540000000000
     7EC22050308AFFFFEFF
     7EC230000FF00001D9B
     7EC2424990100199200
