Update command data for Hyundai/Santa Fe Hybrid

--- a/tests/test_cases/2025/commands/7E7.7EF.22C101.yaml
+++ b/tests/test_cases/2025/commands/7E7.7EF.22C101.yaml
@@ -235,6 +235,19 @@ test_cases:
     7EF25F6FFFF2B2B00FF
     7EF26FFAAAAAAAAAAAA
 - expected_values:
+    SANTAFEHYB_TIRE_FL_SPD: 33
+    SANTAFEHYB_TIRE_FR_SPD: 33
+    SANTAFEHYB_TIRE_RL_SPD: 33
+    SANTAFEHYB_TIRE_RR_SPD: 33
+  response: |-
+    7EF102A62C101FFD7E7
+    7EF217009B4210704EC
+    7EF22D521212121FF7F
+    7EF23FF0030F4000000
+    7EF24FFFF7FFD080B07
+    7EF25FEFFFF000000FF
+    7EF26FFAAAAAAAAAAAA
+- expected_values:
     SANTAFEHYB_TIRE_FL_SPD: 7
     SANTAFEHYB_TIRE_FR_SPD: 7
     SANTAFEHYB_TIRE_RL_SPD: 7
