Update command data for Hyundai/Santa Fe Hybrid

--- a/tests/test_cases/2025/commands/7E4.7EC.220101|fc=1.yaml
+++ b/tests/test_cases/2025/commands/7E4.7EC.220101|fc=1.yaml
@@ -589,6 +589,21 @@ test_cases:
     SANTAFEHYB_HVBAT_CHARGING: 0
     SANTAFEHYB_HVBAT_PLUG_NORM: 0
     SANTAFEHYB_HVBAT_PLUG_RAPD: 0
+    SANTAFEHYB_HVBAT_SOC: 58.5
+  response: |-
+    7EC103E6201018FF3FF
+    7EC21EF750000000000
+    7EC22FF5B0A931C1719
+    7EC231C1C17000029BB
+    7EC2447BA3200009200
+    7EC2500E6840000E64D
+    7EC2600003E0100003A
+    7EC27BC00164BBA0001
+    7EC280C06C810B603E8
+- expected_values:
+    SANTAFEHYB_HVBAT_CHARGING: 0
+    SANTAFEHYB_HVBAT_PLUG_NORM: 0
+    SANTAFEHYB_HVBAT_PLUG_RAPD: 0
     SANTAFEHYB_HVBAT_SOC: 80
   response: |-
     7EC103E6201018FF3FF
