Update command data for Hyundai/Santa Fe Hybrid

--- a/tests/test_cases/2025/commands/7E4.7EC.220101|fc=1.yaml
+++ b/tests/test_cases/2025/commands/7E4.7EC.220101|fc=1.yaml
@@ -574,6 +574,21 @@ test_cases:
     SANTAFEHYB_HVBAT_CHARGING: 0
     SANTAFEHYB_HVBAT_PLUG_NORM: 0
     SANTAFEHYB_HVBAT_PLUG_RAPD: 0
+    SANTAFEHYB_HVBAT_SOC: 48.5
+  response: |-
+    7EC103E6201018FF3FF
+    7EC21EF610000000000
+    7EC2200000A4A1F1B1C
+    7EC231F1E1A000029B7
+    7EC2424B60100007F00
+    7EC2500EC1B0000EBEA
+    7EC2600003F7F00003C
+    7EC27240016DB110000
+    7EC28000000000003E8
+- expected_values:
+    SANTAFEHYB_HVBAT_CHARGING: 0
+    SANTAFEHYB_HVBAT_PLUG_NORM: 0
+    SANTAFEHYB_HVBAT_PLUG_RAPD: 0
     SANTAFEHYB_HVBAT_SOC: 80
   response: |-
     7EC103E6201018FF3FF
