Update command data for Hyundai/Santa Fe Hybrid

--- a/tests/test_cases/2025/commands/7E4.7EC.220105|fc=1.yaml
+++ b/tests/test_cases/2025/commands/7E4.7EC.220105|fc=1.yaml
@@ -201,6 +201,21 @@ test_cases:
     7EC2593000000000000
     7EC260000000000AAAA
 - expected_values:
+    SANTAFEHYB_HVBAT_SOC_DISP: 43
+  response: |-
+    7EC2100B6B6B6B6B6B6
+    7EC22B6B60000000000
+    7EC2300000000000000
+    7EC2400000000000000
+    7EC250000000000AAAA
+    7EC102E620105E03A64
+    7EC2100009101007A00
+    7EC2200000000000014
+    7EC23B4190000005000
+    7EC240003E801000000
+    7EC2556000000000000
+    7EC260000000000AAAA
+- expected_values:
     SANTAFEHYB_HVBAT_SOC_DISP: 66
   response: |-
     7EC23BEBDBEBEBEBEBE
