--- a/tests/test_cases/2025/commands/7E4.7EC.220101|fc=1.yaml
+++ b/tests/test_cases/2025/commands/7E4.7EC.220101|fc=1.yaml
@@ -409,6 +409,21 @@ test_cases:
     SANTAFEHYB_HVBAT_CHARGING: 0
     SANTAFEHYB_HVBAT_PLUG_NORM: 0
     SANTAFEHYB_HVBAT_PLUG_RAPD: 0
+    SANTAFEHYB_HVBAT_SOC: 41.5
+  response: |-
+    7EC103E6201018FF3FF
+    7EC21EF530000000000
+    7EC22054509821C191B
+    7EC231C1C18000020A9
+    7EC2418A60100199200
+    7EC2500EE080000EDDA
+    7EC260000400300003C
+    7EC27A0001718B20000
+    7EC28F20954000003E8
+- expected_values:
+    SANTAFEHYB_HVBAT_CHARGING: 0
+    SANTAFEHYB_HVBAT_PLUG_NORM: 0
+    SANTAFEHYB_HVBAT_PLUG_RAPD: 0
     SANTAFEHYB_HVBAT_SOC: 42
   response: |-
     7EC103E6201018FF3FF
